--- a/_pages/media.html
+++ b/_pages/media.html
@@ -1,1 +1,11 @@
+---
+layout: archive
+title: "Media"
+permalink: /media
+author_profile: true
+---
+
+{% for post in site.media reversed %}
+  {% include archive-single-media.html %}
+{% endfor %}
 
