--- a/_pages/media.html
+++ b/_pages/media.html
@@ -6,6 +6,6 @@ author_profile: true
 ---
 
 {% for post in site.media reversed %}
-  {% include archive-single-media.html %}
+  {% include archive-single.html %}
 {% endfor %}
 
